RESOLVED FIXED241630
REGRESSION (r287195): Safari fails to correctly render indented numbered lists with custom CSS and hyphenation ON
https://bugs.webkit.org/show_bug.cgi?id=241630
Summary REGRESSION (r287195): Safari fails to correctly render indented numbered list...
Antti Koivisto
Reported 2022-06-15 04:37:08 PDT
Hyphenation is affecting list bullets
Attachments
Patch (3.24 KB, patch)
2022-06-15 04:47 PDT, Antti Koivisto
no flags
Patch (3.24 KB, patch)
2022-06-15 04:48 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-06-15 04:37:54 PDT
Antti Koivisto
Comment 2 2022-06-15 04:47:07 PDT
Antti Koivisto
Comment 3 2022-06-15 04:48:43 PDT
EWS
Comment 4 2022-06-15 14:40:08 PDT
Committed r295573 (251578@main): <https://commits.webkit.org/251578@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460252 [details].
Note You need to log in before you can comment on or make changes to this bug.