Cherry-pick 9c7c94e0a796. rdar://problem/91245970

REGRESSION (r287195): Safari fails to correctly render indented numbered lists with custom CSS and hyphenation ON
    https://bugs.webkit.org/show_bug.cgi?id=241630
    <rdar://91245970>

    Reviewed by Darin Adler.

    * LayoutTests/fast/text/list-and-hyphenation-expected.html: Added.
    * LayoutTests/fast/text/list-and-hyphenation.html: Added.
    * Source/WebCore/rendering/RenderText.cpp:
    (WebCore::RenderText::maxWordFragmentWidth):

    Return entireWordWidth instead of 0 in the bail out cases.
    This ends up setting maxWordWidth = w and leaving currMinWidth unchanged in the caller, matching the pre-r287195 behavior.

    Canonical link: https://commits.webkit.org/251578@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295573 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.744@safari-613-branch